--- a/Project/AMS/templates/a/flights.html
+++ b/Project/AMS/templates/a/flights.html
@@ -78,7 +78,7 @@
             <br>
         </div>
         <div class="col-lg">
-            <div class="card shadow p-3 mb-5 bg-white rounded" style="border-color:#30aab8; border-width: 1px; padding: 0px">
+            <div class="card shadow p-3 mb-5 bg-white rounded" style="border-color:#30aab8; border-width: 1px; padding: 1px !important">
                 <div class="card-body" style="padding:0">
                     {% if flights %}
                     <div class="table-responsive">
