--- a/Project/AMS/templates/a/addplane.html
+++ b/Project/AMS/templates/a/addplane.html
@@ -1,18 +1,32 @@
 {% extends "a/add.html"%}
 {% block content%}
- <h1> Add plane for {{g.user[5]}}</h1>
- <form action="#" method="POST">
-     Seat<input type="number" name="seat">
-     <input type="submit" value="Submit">
- </form>
-{% with messages = get_flashed_messages() %}
-  {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-      <li>{{ message }}</li>
-    {% endfor %}
-    </ul>
-  {% endif %}
-  {% endwith %}
-{% endblock %}
-    
+<div class="container-fluid" style="padding:0px">
+  <div class="row">
+    <div class="col-lg-3"></div>
+    <div class="col-lg">
+      <br>
+      <br>
+      <div class="card shadow p-3 mb-5 bg-white rounded"
+        style="border-color:#30aab8; border-width: 1px;padding:50px !important; padding-left: 100px !important; padding-right: 100px !important">
+        <h5 class="card-title" style="color:#30aab8">Add plane for {{g.user[5]}}</h5><br>
+        {% with messages = get_flashed_messages() %}
+        {% if messages %}
+        <div style="text-align:center !important; width: 100%;">
+          {% for message in messages %}
+          <p class="text-danger">{{ message }}</p>
+          {% endfor %}
+        </div>
+        {% endif %}
+        {% endwith %}
+        <form action="#" method="POST">
+          <div class="form-group">
+            <label for="sn">Seat Number</label>
+            <input class="form-control" id="sn" type="number" name="seat" required>
+          </div>
+          <input class="btn btn-success" type="submit" value="Submit" style="width: 30%">
+        </form>
+      </div>
+    </div>
+    <div class="col-lg-3"></div>
+  </div>
+  {% endblock %}
