--- a/Project/AMS/templates/index.html
+++ b/Project/AMS/templates/index.html
@@ -33,28 +33,188 @@
             } else {
                 document.getElementById("retu").value = "";
                 document.getElementById("retu").removeAttribute('disabled');
+                document.getElementById("retu").setAttribute("required", "");
             }
         }
-   </script>
-    {% block head%}
-    {% endblock %}
+    </script>
 </head>
 
 <body>
-    {% if g.user %}
-    <nav><a href="">{{g.username}}</a><a href="{{url_for('auth.logout')}}">Log Out</a><a href="{{url_for(g.role+'.index')}}">Back to index</a></nav>
-    {% else %}
-    <a href="/auth/login/a">Login as Airline Staff</a>
-    <a href="/auth/login/b">Login as Booking Agent</a>
-    <a href="/auth/login/c">Login as Customer</a><br>
-    <a href="/auth/register/a">Register as Airline Staff</a>
-    <a href="/auth/register/b">Register as Booking Agent</a>
-    <a href="/auth/register/c">Register as Customer</a>
-    {% endif %}
-    {% block content %}
-    {% endblock %}
-    {% block footer%}
-    {% endblock %}
+    <div class="container">
+
+        <!--Navigator Bar-->
+        <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #048998;">
+            {% if g.role == 'c' %}
+            <a class="navbar-brand" href="/c/search">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+                    data-fa-transform="rotate--45"></i></a>
+            {% elif g.role == 'b' %}
+            <a class="navbar-brand" href="/b/search">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+                data-fa-transform="rotate--45"></i></a>
+            {% else %}
+            <a class="navbar-brand" href="/">con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+                data-fa-transform="rotate--45"></i></a>
+            {% endif %}
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        {% if g.role == 'c' %}
+                        <a class="nav-link" href="/c/search">Home / Search&nbsp;<i class="fas fa-search"></i></a>
+                        {% elif g.role == 'b' %}
+                        <a class="nav-link" href="/b/search">Home / Search&nbsp;<i class="fas fa-search"></i></a>
+                        {% else %}
+                        <a class="nav-link" href="/">Home / Search&nbsp;<i class="fas fa-search"></i></a>
+                        {% endif %}
+                    </li>
+
+                </ul>
+
+                <ul class="navbar-nav ml-auto">
+                    {% if g.user %}
+                    <li class="nav-item dropdown active" id="cookie">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Hi, {{g.username}}!
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="/{{g.role}}/flights">My Dashboard</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{{url_for('auth.logout')}}">Log out</a>
+                        </div>
+                    </li>
+                    {% else %}
+                    <li class="nav-item dropdown active" id="before1">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Register
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="/auth/register/c">Customer</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/auth/register/b">Booking Agent</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/auth/register/a">Airline Staff</a>
+                        </div>
+                    </li>
+                    <li class="nav-item dropdown active" id="before2">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+                            aria-haspopup="true" aria-expanded="false">
+                            Login
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <a class="dropdown-item" href="/auth/login/c">Customer</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/auth/login/b">Booking Agent</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="/auth/login/a">Airline Staff</a>
+                        </div>
+                    </li>
+                    {% endif %}
+
+                </ul>
+            </div>
+        </nav>
+
+        <!--Banner-->
+        <div class="row">
+
+            <div class="col">
+                <div
+                    style="color: white; background-image: url('../static/journey.jpg'); background-size: 100%; font-size: 3vw; padding-left: 2vw;padding-bottom: 1vh">
+                    start your journey<br>
+                    with<br>con<strong>trails</strong>&nbsp;<i class="fas fa-plane"
+                        data-fa-transform="rotate--45"></i><br></div>
+            </div>
+        </div>
+
+        <!--Flight Search-->
+        <form action="/search" method="POST">
+            <div class="row" style="padding-left: 15px; padding-right: 15px; color: white">
+
+                <div class="col-lg-3" style="background-color:#7579ad">
+                    <br>
+                    <p style="color: white">FROM</p>
+                    <input type="text" class="form-control" id="from" placeholder="Airport / City">
+                    <br>
+                    <br>
+                </div>
+                <div class="col-lg-3" style="background-color: #295f9e">
+                    <br>
+                    <p style="color:white">TO</p>
+                    <input type="text" class="form-control" id="to" placeholder="Airport / City">
+                    <br>
+                </div>
+                <div class="col-lg-3" style="background-color:#eb7756">
+                    <br>
+                    <p style="color:white">DEPART</p>
+                    <input ID="dept" class="form-control" placeholder="YYYY-MM-DD" />
+                    <br>
+                    <div class="radio">
+                        <label>
+                            <input type="radio" name="optionsRadios" id="optionsRadios1" value="return" checked
+                                onclick="getValue(this);"> Return
+                            &nbsp;&nbsp;&nbsp;
+                        </label>
+                        <label>
+                            <input type="radio" name="optionsRadios" id="optionsRadios2" value="oneway"
+                                onclick="getValue(this);"> One Way
+                        </label>
+                    </div>
+                    <br>
+                    <script>
+                        $('#dept').datepicker({
+                            autoclose: true,
+                            todayHighlight: true,
+                            format: 'yyyy-mm-dd'
+                        });
+                    </script>
+                </div>
+                <div class="col-lg-3" style="background-color:#bf5859">
+                    <br>
+                    <p style="color:white">RETURN</p>
+                    <input ID="retu" class="form-control" placeholder="YYYY-MM-DD" />
+                    <br>
+                    <script>
+                        $('#retu').datepicker({
+                            autoclose: true,
+                            todayHighlight: true,
+                            format: 'yyyy-mm-dd'
+                        });
+                    </script>
+                </div>
+            </div>
+
+            <br>
+
+            <!-- Search button & footer -->
+            <div class="flex-grow-1"
+                style="background-image: url('../static/footer.jpg'); background-size: cover; background-repeat: 0; height: 34.5vh">
+                <!--Search Button-->
+                <div class="row" style="height: 15vh; padding-top: 3vh; padding-bottom: 3vh; margin: 0">
+                    <div class="col-lg-9"></div>
+                    <div class="col-lg-3" style="text-align:center">
+                        <button type="submit" class="btn btn-success" href="Searchdisplay();"
+                            style="width: 80%; height: 80%; font-size: 120%">Search Flight &nbsp;<i
+                                class="fas fa-plane-departure"></i></button>
+                    </div>
+                </div>
+                <!--Footer-->
+                <footer class="fixed-bottom">
+                    <div class="row">
+                        <div class="col" style="text-align: center; color: white">
+                            Copyright © 2019 Zander Mao & Helium Liu<br>
+                            All rights reserved.
+                            <br>
+                            <br>
+                        </div>
+                    </div>
+                </footer>
+            </div>
+        </form>
+    </div>
 </body>
 
 </html>
