--- a/Project/AMS/templates/a/reports.html
+++ b/Project/AMS/templates/a/reports.html
@@ -81,7 +81,6 @@
                                         </form>
                                 </div>
                         </div>
-                        <br>
                 </div>
                 <div class="col-lg">
                         <div class="card shadow p-3 mb-5 bg-white rounded"
@@ -137,24 +136,24 @@
         var myChart = new Chart(ctx, {
                 type: 'bar',
                 data: {
-                        labels: ['June', 'July', 'August', 'September', 'October', 'November',
-                                'December', 'Janauary', 'February', 'March', 'April', 'May'
-                        ],
+                        labels: {{last_year[0]|tojson}},
                         datasets: [{
                                 label: 'Tickets Sold:',
                                 data: {{last_year[1]}},
+                                // data: [1,2,3,4,5,6,7,8,9,10,11,12],
                                 backgroundColor: ["rgba(255, 99, 132, 0.2)",
                                         "rgba(255, 159, 64, 0.2)",
                                         "rgba(255, 205, 86, 0.2)",
                                         "rgba(75, 192, 192, 0.2)",
                                         "rgba(54, 162, 235, 0.2)",
                                         "rgba(153, 102, 255, 0.2)",
-                                        "rgba(255, 99, 132, 0.2)",
-                                        "rgba(255, 159, 64, 0.2)",
-                                        "rgba(255, 205, 86, 0.2)",
-                                        "rgba(75, 192, 192, 0.2)",
-                                        "rgba(54, 162, 235, 0.2)",
-                                        "rgba(153, 102, 255, 0.2)",
+
+                                        "rgba(63, 188, 255, 0.2)",
+                                        "rgba(227, 186, 124, 0.2)",
+                                        "rgba(174, 229, 63, 0.2)",
+                                        "rgba(67, 145, 224, 0.2)",
+                                        "rgba(242, 135, 234, 0.2)",
+                                        "rgba(59, 47, 244, 0.2)",
                                 ],
                                 borderColor: ["rgb(255, 99, 132)",
                                         "rgb(255, 159, 64)",
@@ -162,7 +161,12 @@
                                         "rgb(75, 192, 192)",
                                         "rgb(54, 162, 235)",
                                         "rgb(153, 102, 255)",
-                                        "rgb(201, 203, 207)"
+                                        "rgb(63, 188, 255)",
+                                        "rgb(227, 186, 124)",
+                                        "rgb(174, 229, 63)",
+                                        "rgb(67, 145, 224)",
+                                        "rgb(242, 135, 234)",
+                                        "rgb(59, 47, 244)",
                                 ],
                                 borderWidth: 1
                         }]
