--- a/Project/AMS/templates/a/addflights.html
+++ b/Project/AMS/templates/a/addflights.html
@@ -16,6 +16,87 @@
                 </div>
                 {% endif %}
                 {% endwith %}
+                <form action="#" method="POST">
+                    <div class="form-row">
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="ap_id">Airplane Number</label>
+                                <select class="form-control" name="airplane_id" id="ap_id" required>
+                                    {% for airplane in airplanes %}
+                                    <option value="{{airplane[0]}}">{{airplane[0]}}</option>
+                                    {% endfor%}
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="bp">Base Price</label>
+                                <input class="form-control" type="number" id="bp" name="base_price" required>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="status">Flight Status</label>
+                                <select class="form-control" name="flight_status" id="status" required>
+                                    <option value="0">On Time</option>
+                                    <option value="1">Delayed</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-row">
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="da">Departure Airport</label>
+                                <select class="form-control" name="dept_airport" id="da" required>
+                                    {% for airport in airports %}
+                                    <option value="{{airport[0]}}">{{airport[0]}}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="form-group">
+                                <label for="aa">Arrive Airport</label>
+                                <select class="form-control" name="arrv_airport" id="aa" required>
+                                    {% for airport in airports %}
+                                    <option value="{{airport[0]}}">{{airport[0]}}</option>
+                                    {% endfor %}
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="dt">Depart Time</label>
+                        <div class="input-group mb-2 mr-sm-2" id="dt">
+                            <input class="form-control" id="dtpicker" type="text" name="dept_date" required placeholder="YYYY-MM-DD">
+                            <input class="form-control" type="time" name="dept_time" required>
+                            <script>
+                                $('#dtpicker').datepicker({
+                                    autoclose: true,
+                                    todayHighlight: true,
+                                    format: 'yyyy-mm-dd'
+                                });
+                            </script>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="at">Arrive Time</label>
+                        <div class="input-group mb-2 mr-sm-2" id="at">
+                            <input class="form-control" id="atpicker" type="text" name="arrv_date" required placeholder="YYYY-MM-DD">
+                            <input class="form-control" type="time" name="arrv_time" required>
+                            <script>
+                                $('#atpicker').datepicker({
+                                    autoclose: true,
+                                    todayHighlight: true,
+                                    format: 'yyyy-mm-dd'
+                                });
+                            </script>
+                        </div>
+                    </div>
+                    <input class="btn btn-success" type="submit" value="Submit" style="width: 30%">
+                </form>
             </div>
         </div>
         <div class="col-lg-2"></div>
