staff update (except ba.html)

--- a/Project/AMS/templates/a/customer.html
+++ b/Project/AMS/templates/a/customer.html
@@ -28,11 +28,8 @@
     <a class="nav-link" href="/a/reports" role="tab" aria-controls="stats" aria-selected="false">Sales Report</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" href="/a/revenue" role="tab" aria-controls="stats" aria-selected="false">Revenue</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="/a/topdest" role="tab" aria-controls="stats" aria-selected="false">Top
-        Destination</a>
+    <a class="nav-link" href="/a/revenue" role="tab" aria-controls="stats"
+        aria-selected="false">Revenue & Top Dest.</a>
 </li>
 {%endblock%}
 
