--- a/Project/AMS/templates/b/settings.html
+++ b/Project/AMS/templates/b/settings.html
@@ -1,4 +1,4 @@
-{% extends "index.html"%}
+{% extends "dashboard.html"%}
 {% block content%}
 Haha, You found the easter egg! There's nothing you can set, so we give you this wonderful airport map! Enjoy! <br>
 <div><iframe src="https://opensky-network.org/iframe?c=49.998691591699,8.566246032714846&z=11" width="700px" height="500px"></iframe></div> 
