--- a/Project/AMS/templates/c/settings.html
+++ b/Project/AMS/templates/c/settings.html
@@ -1,4 +1,4 @@
-{% extends "index.html"%}
+{% extends "dashboard.html"%}
 {% block content%}
  <h1> Airline Staff Settings</h1>
  Name:{{name}} <br>
