--- a/Project/AMS/templates/a/add.html
+++ b/Project/AMS/templates/a/add.html
@@ -30,11 +30,7 @@
 </li>
 <li class="nav-item">
     <a class="nav-link" href="/a/revenue" role="tab" aria-controls="stats"
-        aria-selected="false">Revenue</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" href="/a/topdest" role="tab" aria-controls="stats" aria-selected="false">Top
-        Destination</a>
+        aria-selected="false">Revenue & Top Dest.</a>
 </li>
 {%endblock%}
 
