--- a/Project/AMS/templates/a/flights.html
+++ b/Project/AMS/templates/a/flights.html
@@ -29,12 +29,8 @@
         aria-selected="false">Sales Report</a>
 </li>
 <li class="nav-item">
-    <a class="nav-link" id="stats-tab" href="/a/revenue" role="tab" aria-controls="stats"
-        aria-selected="false">Revenue</a>
-</li>
-<li class="nav-item">
-    <a class="nav-link" id="stats-tab" href="/a/topdest" role="tab" aria-controls="stats" aria-selected="false">Top
-        Destination</a>
+    <a class="nav-link" href="/a/revenue" role="tab" aria-controls="stats"
+        aria-selected="false">Revenue & Top Dest.</a>
 </li>
 {%endblock%}
 
