--- a/Project/AMS/templates/a/reports.html
+++ b/Project/AMS/templates/a/reports.html
@@ -29,11 +29,8 @@
                 Report</a>
 </li>
 <li class="nav-item">
-        <a class="nav-link" href="/a/revenue" role="tab" aria-controls="stats" aria-selected="false">Revenue</a>
-</li>
-<li class="nav-item">
-        <a class="nav-link" href="/a/topdest" role="tab" aria-controls="stats" aria-selected="false">Top
-                Destination</a>
+    <a class="nav-link" href="/a/revenue" role="tab" aria-controls="stats"
+        aria-selected="false">Revenue & Top Dest.</a>
 </li>
 {%endblock%}
 
