--- a/Project/AMS/templates/a/settings.html
+++ b/Project/AMS/templates/a/settings.html
@@ -1,30 +1,74 @@
-{% extends "index.html"%}
-{% block content%}
- <h1> Airline Staff Settings</h1>
- Username:{{username}} <br>
- First Name:{{fname}} <br>
- Last Name:{{lname}} <br>
- Date of Birth:{{bday}} <br>
- Airline:{{airline}} <br>
- Phones: <br>
- {% for phone in phones %}
- {{phone[0]}} <br>
- {% endfor %}
- Add phone:
- <form action="#" method="POST">
-     Phone Number:<input type="number" name="phone_number">
-     <input type="submit" value="Add">
- </form>
- {% with messages = get_flashed_messages() %}
-    {% if messages %}
-    <ul class=flashes>
-    {% for message in messages %}
-        {% if message %}
-      <li>{{ message }}</li>
-        {% endif %}
-    {% endfor %}
-    </ul>
-  {% endif %}
-  {% endwith %}
- {% endblock %}
-    
+{% extends "dashboard.html"%}
+{%block tab%}
+<li class="nav-item" style="visibility:hidden">
+  <a class="nav-link" id="history-tab" href="/a/flights" role="tab" aria-controls="history" aria-selected="true">Current
+    Flights</a>
+</li>
+<li class="nav-item" style="visibility:hidden">
+
+  <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
+    aria-expanded="false">Add</a>
+  <div class="dropdown-menu">
+    <a class="dropdown-item" href="/a/addflights">Add Flights</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="/a/addplane">Add Plane</a>
+    <div class="dropdown-divider"></div>
+    <a class="dropdown-item" href="/a/addairport">Add Airport</a>
+  </div>
+</li>
+<li class="nav-item" style="visibility:hidden">
+  <a class="nav-link" href="/a/ba" role="tab" aria-controls="stats" aria-selected="false">Booking
+    Agent</a>
+</li>
+<li class="nav-item" style="visibility:hidden">
+  <a class="nav-link" href="/a/customer" role="tab" aria-controls="stats" aria-selected="false">Frequent Customer</a>
+</li>
+<li class="nav-item" style="visibility:hidden">
+  <a class="nav-link" href="/a/reports" role="tab" aria-controls="stats" aria-selected="false">Sales Report</a>
+</li>
+<li class="nav-item" style="visibility:hidden">
+  <a class="nav-link active" href="/a/revenue" role="tab" aria-controls="stats" aria-selected="false">Revenue & Top
+    Dest.</a>
+</li>
+{%endblock%}
+{% block panel%}
+<div class="row">
+  <div class="col-lg-3"></div>
+  <div class="col-lg-6">
+    <div class="card shadow p-3 mb-5 bg-white rounded"
+      style="border-color:#30aab8; border-width: 1px;padding:35px !important; padding-left: 100px !important; padding-right: 100px !important">
+      <h5 class="card-title" style="color:#30aab8">Personal Profile</h5>
+      Username: {{username}} <br>
+      First Name: {{fname}} <br>
+      Last Name: {{lname}} <br>
+      Date of Birth: {{bday}} <br>
+      Airline: {{airline}} <br>
+      Phones: {% for phone in phones %}
+      {{phone[0]}},
+      {% endfor %}
+      <div class="dropdown-divider"></div>
+      <h5 class="card-title" style="color:#30aab8">Add Phone Number</h5>
+      {% with messages = get_flashed_messages() %}
+      {% if messages %}
+      {% for message in messages %}
+      {% if message %}
+      <p class="text-danger">{{ message }}</p>
+      {%endif%}
+      {% endfor %}
+      {% endif %}
+      {% endwith %}
+      <form action="#" method="POST" style="margin:0px;">
+        <div class="form-group">
+          <label for="phone">Phone Number</label>
+        <input class="form-control" id="phone" type="number" name="phone_number">
+      </div>
+        <input class="btn btn-success" type="submit" value="Add">
+      </form>
+    </div>
+  </div>
+  <div class="col-lg-3"></div>
+</div>
+<script>
+  document.getElementById("banner_dash").innerHTML = "Profile & Adding Phone Number";
+</script>
+{% endblock %}
