--- a/Project/AMS/templates/c/purchase_success.html
+++ b/Project/AMS/templates/c/purchase_success.html
@@ -51,6 +51,8 @@
                             Hi, {{g.username}}!
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="/{{g.role}}/settings">Profile</a>
+                                <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/{{g.role}}/flights">My Dashboard</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{{url_for('auth.logout')}}">Log out</a>
