--- a/Project/AMS/templates/dashboard.html
+++ b/Project/AMS/templates/dashboard.html
@@ -74,6 +74,8 @@
                             Hi, {{g.username}}!
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                                <a class="dropdown-item" href="/{{g.role}}/settings">Profile</a>
+                                <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="/{{g.role}}/flights">My Dashboard</a>
                             <div class="dropdown-divider"></div>
                             <a class="dropdown-item" href="{{url_for('auth.logout')}}">Log out</a>
@@ -87,7 +89,7 @@
             style="color: white; background-image: url('../static/journey.jpg'); background-size: 100%; padding-left: 0px; border-bottom: 20px; border-color: black">
 
             <div style="padding-left:2vw">
-                <div style="font-size: 3vw; padding-bottom: 1vh">
+                <div style="font-size: 3vw; padding-bottom: 1vh" id="banner_dash">
                     Nice to see you, {{g.username}}
                 </div>
             </div>
