changed BAID to any string less than 8 chars

--- a/Project/AMS/templates/b/reg_b.html
+++ b/Project/AMS/templates/b/reg_b.html
@@ -10,8 +10,12 @@
 <div class="col-lg-4">
     <!-- <p class="text-muted">Login Information</p> -->
     <div class="form-group">
+        <label for="BAID">Booking Agent ID (8 characters) </label>
+        <input type="text" id="BAID" name="BAID" required class="form-control">
+    </div>
+    <div class="form-group">
         <label for="email">Email</label>
-        <input type="text" id="email" name="email" required class="form-control">
+        <input type="email" id="email" name="email" required class="form-control">
     </div>
     <div class="form-group">
         <label for="pwd">Password</label>
